# AI-Research-Assistant-Local-RAG-Agent

./: .env.example  README.md  app.py  pyproject.toml  setup.py  template.py
research/: 01_create_vectorstore.ipynb  02_test_nodes.ipynb  03_graph.ipynb
src/: agent.py
src/utils/: llm.py  nodes.py  prompts.py  state.py  utils.py
src/vectordb/: create_vectordb.py
